[gd_scene load_steps=45 format=2]

[ext_resource path="res://Scripts/Characters/ExterminatorBot.gd" type="Script" id=2]
[ext_resource path="res://Art/Characters/Exterminator/attack.png" type="Texture" id=3]
[ext_resource path="res://Art/Characters/Exterminator/appear.png" type="Texture" id=4]
[ext_resource path="res://Art/Characters/Exterminator/walk.png" type="Texture" id=5]
[ext_resource path="res://Art/Characters/Exterminator/damaged.png" type="Texture" id=6]
[ext_resource path="res://Art/Characters/Exterminator/vanish.png" type="Texture" id=7]
[ext_resource path="res://Art/Characters/Exterminator/death.png" type="Texture" id=8]
[ext_resource path="res://Art/Characters/Exterminator/idle.png" type="Texture" id=9]
[ext_resource path="res://Scenes/EnemyFX.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sounds/SoundEffects/puff2.wav" type="AudioStream" id=12]
[ext_resource path="res://Sounds/SoundEffects/step.wav" type="AudioStream" id=13]
[ext_resource path="res://Sounds/SoundEffects/teleport.wav" type="AudioStream" id=14]
[ext_resource path="res://Sounds/SoundEffects/step2.wav" type="AudioStream" id=15]
[ext_resource path="res://Art/Shields/QuarterCircle.png" type="Texture" id=16]
[ext_resource path="res://Shaders/Flash.tres" type="Material" id=20]
[ext_resource path="res://Art/Characters/Exterminator/appear_tweaked.png" type="Texture" id=21]
[ext_resource path="res://Sounds/SoundEffects/RevUpSteam.wav" type="AudioStream" id=22]
[ext_resource path="res://Sounds/SoundEffects/Zing.wav" type="AudioStream" id=23]
[ext_resource path="res://Sounds/SoundEffects/chaindie.wav" type="AudioStream" id=24]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.67502
height = 9.0

[sub_resource type="Animation" id=2]
resource_name = "Appear"
length = 1.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "area_deflect"
} ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 14 )
} ],
"times": PoolRealArray( 0.5 )
}

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 1.05
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56, 0.64, 0.72, 0.8, 0.88, 0.96 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 16, 17 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.48, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "expel_bullets"
}, {
"args": [ 0.0 ],
"method": "area_deflect"
} ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 12 )
} ],
"times": PoolRealArray( 0.5 )
}

[sub_resource type="Animation" id=4]
resource_name = "Die"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 24 )
} ],
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -7.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AudioStreamPlayer2D:pitch_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.7 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Entrench"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 21 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 14, 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1 ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=8]
length = 1.1
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 5, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=9]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 13 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 15 )
} ],
"times": PoolRealArray( 0.1, 0.5 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -10.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AudioStreamPlayer2D:pitch_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("EnemyFX/FootsetpParticles:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 97, 108 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 0, 108, 97, 108 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 0, 216, 97, 108 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 0, 324, 97, 108 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 0, 540, 97, 108 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 0, 864, 97, 108 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 0, 972, 97, 108 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 0, 1080, 97, 108 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 0, 1188, 97, 108 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 0, 1296, 97, 108 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 0, 1404, 97, 108 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), null ],
"loop": false,
"name": "Vanish",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=22]

[sub_resource type="Shader" id=23]
code = "shader_type canvas_item;

uniform float RESOLUTION = 1.0;
uniform float FREQ = 1.0;
uniform float ALPHA = 1.0;
uniform float ALPHA_SHIFT = 0.0;
uniform vec3 color = vec3(1, 1, 1);

float rand(vec2 coord){
	return fract(sin(dot(coord, vec2(21.6782397, 5.4359876739)))*1000.3475938);
}

vec2 quantize(vec2 v, float r){
	return floor(v*r)/r;
}

void fragment(){
	vec2 QUV = quantize(FRAGCOORD.xy, RESOLUTION);
	float tex_alpha = texture(TEXTURE, UV).a;
	COLOR = vec4(color, max(0, (rand(QUV + TIME*FREQ)+ALPHA_SHIFT)*ALPHA*tex_alpha));
}

"

[sub_resource type="ShaderMaterial" id=24]
resource_local_to_scene = true
shader = SubResource( 23 )
shader_param/RESOLUTION = 0.2
shader_param/FREQ = 0.002
shader_param/ALPHA = 0.7
shader_param/ALPHA_SHIFT = -0.336
shader_param/color = Vector3( 0.5, 0.5, 1 )

[sub_resource type="CapsuleShape2D" id=25]
radius = 5.0
height = 25.0

[node name="ExterminatorBot" type="KinematicBody2D" groups=[
"enemy",
"enemylike",
"host",
]]
collision_layer = 0
collision_mask = 1025
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.25, 1.25, 1.25, 1 )
light_mask = 5
material = ExtResource( 20 )
position = Vector2( -12, -30 )
texture = ExtResource( 5 )
vframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.21, 10 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Appear = SubResource( 2 )
anims/Attack = SubResource( 3 )
anims/Die = SubResource( 4 )
anims/Entrench = SubResource( 5 )
anims/Hit = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Vanish = SubResource( 8 )
anims/Walk = SubResource( 9 )

[node name="TeleportSprite" type="AnimatedSprite" parent="."]
light_mask = 5
frames = SubResource( 21 )
animation = "Vanish"
frame = 11
offset = Vector2( -13, -30 )

[node name="Deflector" type="Area2D" parent="." groups=[
"mirror",
]]
show_behind_parent = true
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deflector"]
position = Vector2( 0, 5 )
scale = Vector2( 6.5, 6.5 )
shape = SubResource( 22 )

[node name="DeflectorVisual" type="Sprite" parent="Deflector"]
modulate = Color( 2, 2, 2, 1 )
show_behind_parent = true
light_mask = 2
material = SubResource( 24 )
position = Vector2( 0, 5 )
texture = ExtResource( 16 )

[node name="BulletHolder" type="Node2D" parent="."]

[node name="CW" type="Node2D" parent="BulletHolder"]

[node name="CCW" type="Node2D" parent="BulletHolder"]

[node name="Hitbox" type="Area2D" parent="." groups=[
"hitbox",
]]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 7.62939e-06, 5.29732 )
shape = SubResource( 25 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )
volume_db = -10.0
max_distance = 500.0
bus = "Effects"

[node name="RevUpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 22 )
max_distance = 500.0
attenuation = 1.5
bus = "Effects"

[node name="ShootAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )
max_distance = 500.0
attenuation = 1.5
bus = "Effects"

[node name="EnemyFX" parent="." instance=ExtResource( 10 )]

[node name="ClearMoon" parent="EnemyFX" index="2"]
position = Vector2( 0, 18 )
frame = 8

[node name="HealthBar" parent="EnemyFX" index="3"]
margin_top = -34.0
margin_bottom = -26.0

[node name="Shadow" parent="EnemyFX" index="4"]
position = Vector2( -1, 24 )

[node name="FootsetpParticles" parent="EnemyFX" index="5"]
position = Vector2( 0, 23 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="Deflector" to="." method="_on_Deflector_area_entered"]
[connection signal="area_exited" from="Deflector" to="." method="_on_Deflector_area_exited"]

[editable path="EnemyFX"]
